informações header ok

--- a/index.html
+++ b/index.html
@@ -19,8 +19,50 @@
       </nav>
     </header>
     
-    ...
+    <section class="container">
+      <div class="text-header">
+        <p>Mais de 300 acomodações</p>
+        <h1>Acomodações</h1>
+      </div>
+      <div class="filtros">
+        <div class="button-filtro">
+          <button>Flexibidade de cancelamento</button>
+        </div>
+        <div class="button-filtro">
+          <button>Tipo de lugar</button>
+        </div>
+        <div class="button-filtro">
+          <button>Preço</button>
+        </div>
+        <div class="button-filtro">
+          <button>Quartos e camas</button>
+        </div>
+        <div class="button-filtro">
+          <button>Mais filtros</button>
+        </div>
+      </div>
+      <div class="aviso-resticao" >
+        <img src="./img/icon.gif"  alt="icone de relógio">
+        <p><span>Verifique as restrições de viagem antes de fazer uma reserva.</span> A saúde e a segurança das nossas comunidades vêm sempre em primeiro lugar. Siga as orientações do governo e viaje apenas se for essencial. <a href="#">Saiba mais</a>
+        </p>
+      </div>
+    </section>
 
+    <section class="container">
+      <div>
+        <div class="card-quarto">
+          <img src="./img/teste.jpeg" >
+          <div>
+            <span>Apartamento inteiro</span>
+            <h2>Flat - Av Paulista, Limpeza diaria - Completo</h2>
+            <p>7 hóspedes - 1 quarto - 3 camas - 1 banheiro</p>
+            <div class="price">
+              <p><span>R$ 78</span>/noite</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="./index.js"></script>
   </body>
