--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       <div>
         <div class="card-quarto">
           <img src="./img/teste.jpeg" >
-          <div>
+          <div class="infos-quarto">
             <span>Apartamento inteiro</span>
             <h2>Flat - Av Paulista, Limpeza diaria - Completo</h2>
             <p>7 hóspedes - 1 quarto - 3 camas - 1 banheiro</p>
-            <div class="price">
-              <p><span>R$ 78</span>/noite</p>
-            </div>
+          </div>
+          <div class="price">
+            <p><span>R$ 78</span>/noite</p>
           </div>
         </div>
       </div>
