renderizando da API ok

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
 
     <section class="container">
-      <div>
+      <div class="container-cards">
         <div class="card-quarto">
           <img src="./img/teste.jpeg" >
           <div class="infos-quarto">
