--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Airnbb - Estadias)</title>
+    <title>Airnbb - Estadias</title>
     <link href="./styles.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
@@ -19,51 +19,60 @@
       </nav>
     </header>
     
-    <section class="container">
-      <div class="text-header">
-        <p>Mais de 300 acomodações</p>
-        <h1>Acomodações</h1>
-      </div>
-      <div class="filtros">
-        <div class="button-filtro">
-          <button>Flexibidade de cancelamento</button>
+    <section class=" container">
+      <div class="all-content">
+        <div>
+          <div class="text-header">
+            <p>Mais de 300 acomodações</p>
+            <h1>Acomodações</h1>
+          </div>
+          <div class="filtros">
+            <div class="button-filtro">
+              <button>Flexibidade de cancelamento</button>
+            </div>
+            <div class="button-filtro">
+              <button>Tipo de lugar</button>
+            </div>
+            <div class="button-filtro">
+              <button>Preço</button>
+            </div>
+            <div class="button-filtro">
+              <button>Quartos e camas</button>
+            </div>
+            <div class="button-filtro">
+              <button>Mais filtros</button>
+            </div>
+          </div>
+          <div class="aviso-resticao" >
+            <img src="./img/icon.gif"  alt="icone de relógio">
+            <p><span>Verifique as restrições de viagem antes de fazer uma reserva.</span> A saúde e a segurança das nossas comunidades vêm sempre em primeiro lugar. Siga as orientações do governo e viaje apenas se for essencial. <a href="#">Saiba mais</a>
+            </p>
+          </div>
         </div>
-        <div class="button-filtro">
-          <button>Tipo de lugar</button>
-        </div>
-        <div class="button-filtro">
-          <button>Preço</button>
-        </div>
-        <div class="button-filtro">
-          <button>Quartos e camas</button>
-        </div>
-        <div class="button-filtro">
-          <button>Mais filtros</button>
-        </div>
-      </div>
-      <div class="aviso-resticao" >
-        <img src="./img/icon.gif"  alt="icone de relógio">
-        <p><span>Verifique as restrições de viagem antes de fazer uma reserva.</span> A saúde e a segurança das nossas comunidades vêm sempre em primeiro lugar. Siga as orientações do governo e viaje apenas se for essencial. <a href="#">Saiba mais</a>
-        </p>
-      </div>
-    </section>
 
-    <section class="container">
-      <div class="container-cards">
-        <div class="card-quarto">
-          <img src="./img/teste.jpeg" >
-          <div class="infos-quarto">
-            <span>Apartamento inteiro</span>
-            <h2>Flat - Av Paulista, Limpeza diaria - Completo</h2>
-            <p>7 hóspedes - 1 quarto - 3 camas - 1 banheiro</p>
-          </div>
-          <div class="price">
-            <p><span>R$ 78</span>/noite</p>
+        <div class="content results-section">
+          <div class="container-cards">
+            <!-- <div class="card-quarto">
+              <img src="./img/teste.jpeg" >
+              <div class="infos-quarto">
+                <span>Apartamento inteiro</span>
+                <h2>Flat - Av Paulista, Limpeza diaria - Completo</h2>
+                <p>7 hóspedes - 1 quarto - 3 camas - 1 banheiro</p>
+              </div>
+              <div class="price">
+                <p><span>R$ 78</span>/noite</p>
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
+      <div id="map"></div>
     </section>
 
     <script src="./index.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZMAYDMx8AEMM3wYS5lQqHpJO0leGFL5s&callback=initMap">
+    </script>
+    </script>
   </body>
 </html>
